--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+body{
+    font-family: 'Urbanist', sans-serif !important;
+}
 .bg-green-300{
     background: #384037 !important;
 }
