--- a/store/templates/store/login.html
+++ b/store/templates/store/login.html
@@ -1,35 +1,64 @@
 {% extends "store/base.html" %} {% block content %}
     {% load static %}
-        <div class="login">
-            <div class="div">
-                <div class="navbar">
-                    <div class="navbar-2">
-                        <img src="{% static 'images1/On1yOne-White.png' %}">
-                    </div>
-                <div class="group">
-                    <div class="text-wrapper">Login</div>
-                    <div class="frame">
-                        <div class="frame-2">
-                            <form method="post" action="{% url 'login' %}">
-                                {% csrf_token %}
-                                <label for="username">Username:</label><br>
-                                <input type="text" id="username" name="username" required><br><br>
-                                
-                                <label for="password">Password:</label><br>
-                                <input type="password" id="password" name="password" required><br><br>
-                            </form>
-                        </div>
-                        <button type="submit" class="button" style="vertical-align:middle" value="Login"><span>Login </span></button>
-                    </div>
+    <div class="p-12 flex justify-center">
+        <div class="flex flex-col justify-center w-1/4">
+            <h1 class="text-7xl font-medium py-12 text-center">Login</h1>
+            <form method="POST" action="{% url 'login' %}">
+                {% csrf_token %}
+                <label class="input input-bordered flex items-center gap-2 m-6">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor"
+                         class="w-4 h-4 opacity-70">
+                        <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6ZM12.735 14c.618 0 1.093-.561.872-1.139a6.002 6.002 0 0 0-11.215 0c-.22.578.254 1.139.872 1.139h9.47Z"/>
+                    </svg>
+                    <input type="text" class="grow" id="username" placeholder="Username" required/>
+                </label>
+                <label class="input input-bordered flex items-center gap-2 m-6">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor"
+                         class="w-4 h-4 opacity-70">
+                        <path fill-rule="evenodd"
+                              d="M14 6a4 4 0 0 1-4.899 3.899l-1.955 1.955a.5.5 0 0 1-.353.146H5v1.5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.5-.5v-2.293a.5.5 0 0 1 .146-.353l3.955-3.955A4 4 0 1 1 14 6Zm-4-2a.75.75 0 0 0 0 1.5.5.5 0 0 1 .5.5.75.75 0 0 0 1.5 0 2 2 0 0 0-2-2Z"
+                              clip-rule="evenodd"/>
+                    </svg>
+                    <input type="password" class="grow" id="password" placeholder="Password" required/>
+                </label>
+                {% for message in messages %}
+                    {% if message %}
+                        <h3 class="text-red-900">{{ message }}</h3>
+                    {% endif %}
+                {% endfor %}
+                <div class="flex justify-center">
+                    <button type="submit" class="btn btn-slate " value="Login"><span>Login </span></button>
                 </div>
-                </div>
-            </div>
+            </form>
+
         </div>
-        <div>
-            {% for message in messages %}
-            {% if message %}
-                <h3>{{message}}</h3>
-            {% endif %}
-            {% endfor %}
-        </div>
+    </div>
+    {#            <div class="login">#}
+    {#                <div class="div">#}
+    {#                    <div class="navbar">#}
+    {#                        <div class="navbar-2">#}
+    {#                            <img src="{% static 'images1/On1yOne-White.png' %}">#}
+    {#                        </div>#}
+    {#                    <div class="group">#}
+    {#                        <div class="text-wrapper">Login</div>#}
+    {#                        <div class="frame">#}
+    {#                            <div class="frame-2">#}
+    {#                                <form method="post" action="{% url 'login' %}">#}
+    {#                                    {% csrf_token %}#}
+    {#                                    <label for="username">Username:</label><br>#}
+    {#                                    <input type="text" id="username" name="username" required><br><br>#}
+    {##}
+    {#                                    <label for="password">Password:</label><br>#}
+    {#                                    <input type="password" id="password" name="password" required><br><br>#}
+    {#                                </form>#}
+    {#                            </div>#}
+    {#                            <button type="submit" class="button" style="vertical-align:middle" value="Login"><span>Login </span></button>#}
+    {#                        </div>#}
+    {#                    </div>#}
+    {#                    </div>#}
+    {#                </div>#}
+    {#            </div>#}
+    {#            <div>#}
+
+    </div>
 {% endblock %}
